--- a/app/src/main/res/layout/dialog_todo.xml
+++ b/app/src/main/res/layout/dialog_todo.xml
@@ -61,14 +61,14 @@
                     android:src="@drawable/ic_done_black_24dp"/>
 
                 <ImageView
-                    android:id="@+id/close"
+                    android:id="@+id/delete"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toLeftOf="@id/save"
                     android:layout_marginRight="20dp"
-                    android:src="@drawable/ic_close_black_24dp"/>
+                    android:src="@drawable/ic_delete_outline_24px"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -119,7 +119,7 @@
                 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/chooseTime"
-                    android:layout_width="104dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="32dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -145,7 +145,8 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toRightOf="@id/timeIcon"
                         app:layout_constraintRight_toRightOf="parent"
-                        android:layout_marginEnd="8dp"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginEnd="16dp"
                         android:text="选择时间"
                         android:textColor="@color/themeColorBlack"
                         android:textSize="14sp"
@@ -243,7 +244,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/courseBg"
             android:layout_width="match_parent"
-            android:layout_height="96dp"
+            android:layout_height="88dp"
             android:background="@drawable/bg_layout_todo_course">
 
             <LinearLayout
@@ -285,13 +286,14 @@
             </LinearLayout>
 
             <ImageView
+                android:id="@+id/deleteCourse"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginRight="20dp"
-                android:src="@drawable/ic_insert_chart_outlined_24px"
+                android:src="@drawable/ic_delete_black_24dp"
                 android:alpha="0.7"/>
 
 
