--- a/app/src/main/res/layout/layout_titlebar.xml
+++ b/app/src/main/res/layout/layout_titlebar.xml
@@ -18,8 +18,29 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:text="Title"/>
 
+        <!--<LinearLayout
+            android:id="@+id/searchCourse"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/avatarBg"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/bg_touch">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_search_black_24dp"/>
+
+        </LinearLayout>-->
+
 
         <ImageView
+            android:id="@+id/avatarBg"
             android:layout_width="40dp"
             android:layout_height="40dp"
             app:layout_constraintRight_toRightOf="parent"
