--- a/app/src/main/res/layout/fragment_courselist.xml
+++ b/app/src/main/res/layout/fragment_courselist.xml
@@ -8,92 +8,94 @@
     app:layout_constraintRight_toRightOf="parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.shg.keyebang.view.general.TitleBarLayout
+    <LinearLayout
+        android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/courseListBar"/>
-
-    <LinearLayout
-        android:id="@+id/courseListSearchBar"
-        android:layout_width="320dp"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/courseListBar"
         android:orientation="vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.shg.keyebang.view.general.TitleBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:id="@+id/courseListBar"/>
 
-            <EditText
-                android:id="@+id/searchText"
+        <LinearLayout
+            android:id="@+id/courseListSearchBar"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:paddingStart="12dp"
-                android:paddingEnd="48dp"
-                android:textSize="14sp"
-                android:hint="搜索课程"
-                android:maxLines="1"
-                android:textColor="@color/themeColorBlack"
-                android:background="@drawable/bg_roundrectangle_black_alpha"/>
+                android:layout_height="40dp">
+
+                <EditText
+                    android:id="@+id/searchText"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:paddingStart="14dp"
+                    android:paddingEnd="48dp"
+                    android:textSize="14sp"
+                    android:hint="搜索课程"
+                    android:maxLines="1"
+                    android:textColor="@color/themeColorBlack"
+                    android:background="@drawable/bg_roundrectangle_black_alpha"/>
 
 
-            <ImageView
-                android:id="@+id/searchIcon"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginRight="14dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:src="@drawable/ic_search_black_24dp"
-                />
+                <ImageView
+                    android:id="@+id/searchIcon"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginRight="14dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:src="@drawable/ic_search_black_24dp"
+                    />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="12dp"/>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="4dp"/>
-
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/courseListTabLayout"
-            android:layout_width="144dp"
-            android:layout_height="36dp"
-            android:layout_gravity="start"
-            android:layout_marginLeft="-13dp"
-            app:tabIndicator="@drawable/courselist_indicator"
-            app:tabIndicatorColor="@color/themeColorBlue"
-            app:tabTextColor="@color/textHintColor"
-            app:tabSelectedTextColor="@color/themeColorBlack">
-
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/courseListTabLayout"
+                android:layout_width="136dp"
+                android:layout_height="32dp"
                 android:layout_gravity="start"
+                android:layout_marginLeft="-13dp"
+                app:tabIndicator="@drawable/indicator_courselist"
+                app:tabIndicatorColor="@color/themeColorBlue"
+                app:tabTextColor="@color/textHintColor"
+                app:tabSelectedTextColor="@color/themeColorBlack">
 
-                android:text="必修课"/>
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="必修课" />
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="选修课"/>
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="选修课"/>
 
-        </com.google.android.material.tabs.TabLayout>
+            </com.google.android.material.tabs.TabLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
-
 
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/courseListViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/courseListSearchBar"/>
+        android:layout_below="@id/topBar"/>
 
 
 </RelativeLayout>
