--- a/app/src/main/res/drawable/cursor_todo.xml
+++ b/app/src/main/res/drawable/cursor_todo.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <size android:width="2dp" />
+    <size android:width="3dp" />
     <solid android:color="@color/themeColorBlue" />
+    <corners android:radius="2dp"/>
 </shape>
