--- a/app/src/main/res/layout/activity_course_main_choose.xml
+++ b/app/src/main/res/layout/activity_course_main_choose.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/chooseCourseContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -14,7 +16,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="40dp"/>
+        android:layout_height="20dp"/>
 
     <com.github.jdsjlzx.recyclerview.LuRecyclerView
         android:id="@+id/chooseCourseRecycler"
