--- a/app/src/main/res/layout/fragment_course_list.xml
+++ b/app/src/main/res/layout/fragment_course_list.xml
@@ -36,6 +36,7 @@
                     android:layout_height="40dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    android:imeOptions="actionSearch"
                     android:paddingStart="14dp"
                     android:paddingEnd="48dp"
                     android:textSize="14sp"
