--- a/app/src/main/res/layout/fragment_coursetable.xml
+++ b/app/src/main/res/layout/fragment_coursetable.xml
@@ -10,83 +10,89 @@
         android:layout_height="wrap_content"
         android:id="@+id/courseTableBar"/>
 
-    <ScrollView
-        android:id="@+id/courseTableScrollView"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refreshTable"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/courseTableBar"
-        android:background="#f9f9f9"
-        android:scrollbars="none"
-        >
+        android:layout_below="@id/courseTableBar">
 
-        <LinearLayout
-            android:layout_width="326dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_horizontal">
+        <ScrollView
+            android:id="@+id/courseTableScrollView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="none"
+            >
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"/>
+            <LinearLayout
+                android:layout_width="326dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"/>
 
-                <ImageView
-                    android:id="@+id/timeBg"
-                    android:layout_width="104dp"
-                    android:layout_height="24dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:background="@drawable/bg_capsule_black_alpha"/>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/timeIcon"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginLeft="6dp"
-                    android:src="@drawable/ic_timer_black_24dp"
-                    android:alpha="0.6"/>
+                    <ImageView
+                        android:id="@+id/timeBg"
+                        android:layout_width="104dp"
+                        android:layout_height="24dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:background="@drawable/bg_capsule_black_alpha"/>
 
-                <TextView
-                    style="@style/subTitle"
-                    android:id="@+id/semesterTime"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toRightOf="@id/timeIcon"
-                    app:layout_constraintRight_toRightOf="@id/timeBg"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="12dp"
-                    android:text="semesterTime"
-                    android:textStyle="bold"/>
+                    <ImageView
+                        android:id="@+id/timeIcon"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        android:layout_marginLeft="6dp"
+                        android:src="@drawable/ic_timer_black_24dp"
+                        android:alpha="0.6"/>
 
-                <TextView
-                    style="@style/subTitle"
-                    android:id="@+id/date"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:text=""/>
+                    <TextView
+                        style="@style/subTitle"
+                        android:id="@+id/semesterTime"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@id/timeIcon"
+                        app:layout_constraintRight_toRightOf="@id/timeBg"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginRight="12dp"
+                        android:text="semesterTime"
+                        android:textStyle="bold"/>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        style="@style/subTitle"
+                        android:id="@+id/date"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        android:text=""/>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="6dp"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/tableContainer"
-                android:layout_width="match_parent"
-                android:layout_height="920dp">
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="6dp"/>
 
-        </LinearLayout>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/tableContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="920dp">
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </ScrollView>
+            </LinearLayout>
+
+        </ScrollView>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
 
