--- a/app/src/main/res/layout/item_course.xml
+++ b/app/src/main/res/layout/item_course.xml
@@ -17,16 +17,18 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginStart="20dp"
             android:orientation="vertical">
 
             <TextView
                 style="@style/miniMainTitle"
-                android:id="@+id/chooseCourseName"
+                android:id="@+id/itemCourseName"
+                android:textSize="15sp"
                 android:text="示例课程"/>
 
             <TextView
                 style="@style/subTitle"
-                android:id="@+id/chooseCourseMessage"
+                android:id="@+id/itemCourseMessage"
                 android:layout_marginTop="2dp"
                 android:text="李华·周三10-11 周四10-11"/>
 
@@ -38,12 +40,13 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="20dp"
             android:src="@drawable/ic_navigate_next_black_24dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="20dp"/>
+        android:layout_height="16dp"/>
 
 </LinearLayout>
