--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -246,9 +246,23 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"/>
 
-                <View
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"/>
+                    android:layout_height="48dp">
+
+                    <TextView
+                        android:id="@+id/limitMessage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        android:text="你没有查看评论的权限，评论后方可查看"
+                        android:textSize="12sp"
+                        android:textColor="@color/themeColorBlack"
+                        android:alpha="0.6"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
 
