--- a/app/src/main/res/layout/item_coursetable_coursecard.xml
+++ b/app/src/main/res/layout/item_coursetable_coursecard.xml
@@ -10,7 +10,7 @@
     android:background="@drawable/bg_coursetable_coursecard">
 
     <TextView
-        android:id="@+id/className"
+        android:id="@+id/courseName"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,10 +25,10 @@
         android:ellipsize="end"/>
 
     <TextView
-        android:id="@+id/classPlace"
+        android:id="@+id/coursePlace"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/className"
+        app:layout_constraintTop_toBottomOf="@id/courseName"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="2dp"
         android:layout_marginLeft="6dp"
@@ -42,7 +42,7 @@
         android:id="@+id/teacher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/classPlace"
+        app:layout_constraintTop_toBottomOf="@id/coursePlace"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="6dp"
         android:text="丢孔杰平"
