--- a/app/src/main/res/drawable/ic_credit_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_credit_black_24dp.xml
@@ -1,4 +1,4 @@
 <vector android:height="20dp" android:viewportHeight="24.0"
     android:viewportWidth="24.0" android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/cardColorBlue" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM17,13h-4v4h-2v-4L7,13v-2h4L11,7h2v4h4v2z"/>
+    <path android:fillColor="#FF000000" android:pathData="M17,3L7,3c-1.1,0 -1.99,0.9 -1.99,2L5,21l7,-3 7,3L19,5c0,-1.1 -0.9,-2 -2,-2zM17,18l-5,-2.18L7,18L7,5h10v13z"/>
 </vector>
