--- a/app/src/main/res/drawable/ic_school_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_school_black_24dp.xml
@@ -1,4 +1,4 @@
 <vector android:height="20dp" android:viewportHeight="24.0"
     android:viewportWidth="24.0" android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/cardColorBlue" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM17,13h-4v4h-2v-4L7,13v-2h4L11,7h2v4h4v2z"/>
+    <path android:fillColor="@color/themeColorBlack" android:pathData="M5,13.18v4L12,21l7,-3.82v-4L12,17l-7,-3.82zM12,3L1,9l11,6 9,-4.91V17h2V9L12,3z"/>
 </vector>
