--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -61,7 +61,6 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:orientation="vertical"
                         android:layout_width="match_parent"
                         android:layout_height="48dp">
 
@@ -72,16 +71,17 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
                             android:translationX="20dp"
-                            android:src="@drawable/ic_person_black_24dp"/>
+                            android:src="@drawable/ic_school_black_24dp"/>
 
                         <TextView
+                            android:id="@+id/courseType"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
                             android:translationX="60dp"
-                            android:text="课程信息"
+                            android:text="必修课"
                             android:textSize="14sp"
                             android:textColor="@color/themeColorBlack"/>
 
@@ -89,7 +89,6 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:orientation="vertical"
                         android:layout_width="match_parent"
                         android:layout_height="48dp">
 
@@ -100,16 +99,17 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
                             android:translationX="20dp"
-                            android:src="@drawable/ic_person_black_24dp"/>
+                            android:src="@drawable/ic_credit_black_24dp"/>
 
                         <TextView
+                            android:id="@+id/courseCredit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
                             android:translationX="60dp"
-                            android:text="课程信息"
+                            android:text="学分"
                             android:textSize="14sp"
                             android:textColor="@color/themeColorBlack"/>
 
@@ -117,7 +117,6 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:orientation="vertical"
                         android:layout_width="match_parent"
                         android:layout_height="48dp">
 
@@ -128,9 +127,10 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
                             android:translationX="20dp"
-                            android:src="@drawable/ic_person_black_24dp"/>
+                            android:src="@drawable/ic_assignment_24px"/>
 
                         <TextView
+                            android:id="@+id/courseMessage"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             app:layout_constraintTop_toTopOf="parent"
@@ -222,6 +222,16 @@
                             android:textStyle="bold"
                             android:textColor="@color/themeColorBlueDark"/>
 
+                        <ImageView
+                            android:id="@+id/addBookButton"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            android:translationX="-20dp"
+                            android:translationY="-8.5dp"
+                            android:src="@drawable/ic_add_circle_black_24dp"/>
+
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -231,8 +241,44 @@
                         android:layout_height="wrap_content"/>
 
                     <View
+                    android:layout_width="match_parent"
+                    android:layout_height="8dp"/>
+
+                    <View
                         android:layout_width="match_parent"
-                        android:layout_height="8dp"/>
+                        android:layout_height="0.5dp"
+                        android:background="#0E000000"/>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/getSecondHandButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:background="@drawable/bg_touch_rectangle">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            android:translationX="20dp"
+                            android:text="二手书信息"
+                            android:textSize="14sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/themeColorBlueDark"/>
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            android:translationX="-20dp"
+                            android:src="@drawable/ic_short_text_black_24dp"/>
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
                 </LinearLayout>
 
@@ -263,6 +309,10 @@
                         android:alpha="0.6"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"/>
 
             </LinearLayout>
 
@@ -310,7 +360,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/likeButton"
                 android:translationX="-24dp"
-                android:background="@drawable/bg_touch">
+                android:background="@drawable/bg_touch_round">
 
                 <ImageView
                     android:layout_width="20dp"
