--- a/app/src/main/res/layout/item_course_select.xml
+++ b/app/src/main/res/layout/item_course_select.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="64dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -15,17 +14,40 @@
         android:translationX="20dp"
         android:src="@drawable/ic_timer_black_24dp"/>
 
-    <TextView
-        android:id="@+id/timeMessage"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:translationX="60dp"
-        android:text="课程信息"
-        android:textSize="14sp"
-        android:textColor="@color/themeColorBlack"/>
+        android:translationX="60dp">
+
+        <TextView
+            android:id="@+id/timeMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="课程信息"
+            android:textSize="14sp"
+            android:textColor="@color/themeColorBlack"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"/>
+
+        <TextView
+            android:id="@+id/courseSelectMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="课程信息"
+            android:textSize="13sp"
+            android:textColor="@color/themeColorBlack"
+            android:alpha="0.5"/>
+
+
+    </LinearLayout>
+
+
 
     <ImageView
         android:id="@+id/addCourse"
@@ -35,8 +57,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:translationX="-20dp"
-        android:src="@drawable/ic_add_circle_black_24dp"
-        android:alpha="0.6"/>
+        android:src="@drawable/ic_add_circle_black_24dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
