--- a/app/src/main/res/layout/layout_titlebar.xml
+++ b/app/src/main/res/layout/layout_titlebar.xml
@@ -27,7 +27,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="@id/avatarBg"
             android:layout_marginRight="10dp"
-            android:background="@drawable/bg_touch">
+            android:background="@drawable/bg_touch_round">
 
             <ImageView
                 android:layout_width="20dp"
