--- a/app/src/main/res/drawable/bg_touch_rectangle.xml
+++ b/app/src/main/res/drawable/bg_touch_rectangle.xml
@@ -4,6 +4,9 @@
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <solid android:color="#FFFFFF"/>
+            <corners
+                android:radius="6dp">
+            </corners>
         </shape>
     </item>
 </ripple>
