--- a/app/src/main/res/layout/activity_second_hand_book.xml
+++ b/app/src/main/res/layout/activity_second_hand_book.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     android:id="@+id/secondHandBookContainer"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
@@ -13,8 +13,9 @@
 
     <com.github.jdsjlzx.recyclerview.LRecyclerView
         android:id="@+id/secondHandBookRecycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_width="320dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"/>
 
 
 </LinearLayout>
