--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -57,6 +57,41 @@
                             android:textStyle="bold"
                             android:textColor="@color/themeColorBlueDark"/>
 
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="64dp"
+                            android:layout_height="28dp"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:translationX="-20dp"
+                            android:translationY="-4dp"
+                            android:background="@drawable/bg_capsule_red">
+
+                            <TextView
+                                android:id="@+id/likeNum"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                app:layout_constraintRight_toLeftOf="@id/likeNumIcon"
+                                android:text="0"
+                                android:textSize="14sp"
+                                android:textStyle="bold"
+                                android:textColor="@color/cardColorRed"/>
+
+                            <ImageView
+                                android:id="@+id/likeNumIcon"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintRight_toRightOf="parent"
+                                android:translationX="-8dp"
+                                android:src="@drawable/ic_favorite_red_24dp"
+                                android:alpha="0.5"/>
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
