Project Structure Optimization

--- a/app/src/main/res/layout/activity_account_signup.xml
+++ b/app/src/main/res/layout/activity_account_signup.xml
@@ -71,17 +71,17 @@
                 android:paddingEnd="104dp"/>
 
             <TextView
-                android:id="@+id/studentIdHint"
+                android:id="@+id/passwordHint"
                 style="@style/accountHint"
                 app:layout_constraintTop_toBottomOf="@id/signUpNickname"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="12dp"
-                android:text="学号"/>
+                android:text="密码"/>
 
             <EditText
-                android:id="@+id/signUpStudentId"
+                android:id="@+id/signUpPassword"
                 style="@style/accountEditText"
-                app:layout_constraintTop_toBottomOf="@id/studentIdHint"
+                app:layout_constraintTop_toBottomOf="@id/passwordHint"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="8dp"
                 android:paddingEnd="104dp"/>
@@ -89,7 +89,7 @@
             <TextView
                 android:id="@+id/semesterHint"
                 style="@style/accountHint"
-                app:layout_constraintTop_toBottomOf="@id/signUpStudentId"
+                app:layout_constraintTop_toBottomOf="@id/signUpPassword"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="12dp"
                 android:text="年级"/>
@@ -118,17 +118,17 @@
                 android:layout_marginTop="8dp"/>
 
             <TextView
-                android:id="@+id/passwordHint"
+                android:id="@+id/contactHint"
                 style="@style/accountHint"
                 app:layout_constraintTop_toBottomOf="@id/signUpMajor"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="12dp"
-                android:text="密码"/>
+                android:text="联系方式"/>
 
             <EditText
-                android:id="@+id/signUpPassword"
+                android:id="@+id/signUpContact"
                 style="@style/accountEditText"
-                app:layout_constraintTop_toBottomOf="@id/passwordHint"
+                app:layout_constraintTop_toBottomOf="@id/contactHint"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="8dp"/>
 
