--- a/app/src/main/res/layout/fragment_course_optional.xml
+++ b/app/src/main/res/layout/fragment_course_optional.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/optionalCourseRecycler"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="320dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="match_parent"/>
 
         </LinearLayout>
 
