--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -170,9 +170,10 @@
                             android:layout_width="240dp"
                             android:layout_height="wrap_content"
                             app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
                             android:translationX="60dp"
-                            android:layout_marginTop="20dp"
+                            android:layout_marginTop="8dp"
                             android:layout_marginBottom="8dp"
                             android:text="课程信息"
                             android:textSize="14sp"
