--- a/app/src/main/res/layout/item_course_comment.xml
+++ b/app/src/main/res/layout/item_course_comment.xml
@@ -16,7 +16,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:src="@drawable/deer"/>
+            android:src="@drawable/avatar"/>
 
         <TextView
             style="@style/miniMainTitle"
