--- a/app/src/main/res/layout/activity_account_login.xml
+++ b/app/src/main/res/layout/activity_account_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/themeColorWhite"
     tools:context=".view.activity.account.LoginActivity"
     >
 
@@ -57,7 +57,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="32dp"
-        android:text="进入课业帮"/>
+        android:text="@string/entryButtonHint"/>
 
 
 
