--- a/app/src/main/res/layout/activity_account_signup.xml
+++ b/app/src/main/res/layout/activity_account_signup.xml
@@ -36,7 +36,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="欢迎注册！首先请完善信息"
+                android:text="@string/signUpTitle"
                 android:textColor="@color/textColor"
                 android:textSize="18sp"
                 android:textStyle="bold"
