--- a/app/src/main/res/layout/item_course_book.xml
+++ b/app/src/main/res/layout/item_course_book.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="wrap_content"
+    android:minHeight="48dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -18,11 +19,13 @@
 
     <TextView
         android:id="@+id/bookName"
-        android:layout_width="wrap_content"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:translationX="60dp"
         android:text="书籍信息"
         android:textSize="14sp"
