--- a/app/src/main/res/layout/welcome_login_phone.xml
+++ b/app/src/main/res/layout/welcome_login_phone.xml
@@ -16,8 +16,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="360dp"
         android:layout_height="384dp"
-        android:background="@drawable/bg_layout_up"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        android:background="@drawable/bg_layout_up">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="280dp"
@@ -49,7 +48,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
-                android:id="@+id/commonLoginPhoneNumberHint"
+                android:id="@+id/phoneLoginPhoneNumberHint"
                 style="@style/accountHint"
                 app:layout_constraintTop_toBottomOf="@id/phoneLoginTitleBg"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -58,9 +57,10 @@
             <EditText
                 android:id="@+id/phoneLoginPhoneNumber"
                 style="@style/accountEditText"
-                app:layout_constraintTop_toBottomOf="@id/commonLoginPhoneNumberHint"
+                app:layout_constraintTop_toBottomOf="@id/phoneLoginPhoneNumberHint"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="8dp"
+                android:inputType="phone"
                 android:paddingEnd="104dp"/>
 
 
@@ -103,7 +103,8 @@
                 style="@style/accountEditText"
                 app:layout_constraintTop_toBottomOf="@id/phoneLoginPasswordHint"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="8dp"/>
+                android:layout_marginTop="8dp"
+                android:inputType="text"/>
 
             <TextView
                 android:id="@+id/toCommonLogin"
