--- a/app/src/main/res/layout/activity_course_search.xml
+++ b/app/src/main/res/layout/activity_course_search.xml
@@ -24,6 +24,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:imeOptions="actionSearch"
+            android:inputType="text"
             android:paddingStart="14dp"
             android:paddingEnd="48dp"
             android:textSize="14sp"
@@ -38,7 +39,7 @@
             android:id="@+id/searchIcon"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginRight="14dp"
+            android:layout_marginEnd="14dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
