--- a/app/src/main/res/layout/dialog_todo.xml
+++ b/app/src/main/res/layout/dialog_todo.xml
@@ -41,8 +41,9 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginLeft="32dp"
+                    android:layout_marginStart="32dp"
                     android:paddingStart="4dp"
+                    android:inputType="text"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:hint="Todo标题"
@@ -67,7 +68,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toLeftOf="@id/save"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginEnd="20dp"
                     android:src="@drawable/ic_delete_outline_24px"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -95,8 +96,9 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     android:layout_marginTop="9dp"
-                    android:layout_marginLeft="36dp"
+                    android:layout_marginStart="36dp"
                     android:gravity="top"
+                    android:inputType="text"
                     android:textSize="16sp"
                     android:textStyle="normal"
                     android:alpha="0.6"
@@ -133,7 +135,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginStart="8dp"
                         android:src="@drawable/ic_alarm_24px"
                         android:alpha="0.6"/>
 
@@ -145,7 +147,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toRightOf="@id/timeIcon"
                         app:layout_constraintRight_toRightOf="parent"
-                        android:layout_marginLeft="6dp"
+                        android:layout_marginStart="6dp"
                         android:layout_marginEnd="16dp"
                         android:text="选择时间"
                         android:textColor="@color/themeColorBlack"
@@ -188,7 +190,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toLeftOf="@id/chooseRed"
-                    android:layout_marginRight="8dp">
+                    android:layout_marginEnd="8dp">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -214,7 +216,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toLeftOf="@id/chooseGreen"
-                    android:layout_marginRight="8dp">
+                    android:layout_marginEnd="8dp">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -254,7 +256,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginLeft="20dp">
+                android:layout_marginStart="20dp">
 
                 <TextView
                     android:id="@+id/courseName"
@@ -292,7 +294,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
                 android:src="@drawable/ic_delete_black_24dp"
                 android:alpha="0.7"/>
 
