--- a/app/src/main/res/layout/fragment_course_list.xml
+++ b/app/src/main/res/layout/fragment_course_list.xml
@@ -51,7 +51,7 @@
                     android:id="@+id/searchIcon"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:layout_marginRight="14dp"
+                    android:layout_marginEnd="14dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -69,7 +69,7 @@
                 android:layout_width="136dp"
                 android:layout_height="32dp"
                 android:layout_gravity="start"
-                android:layout_marginLeft="-13dp"
+                android:layout_marginStart="-13dp"
                 app:tabIndicator="@drawable/indicator_courselist"
                 app:tabIndicatorColor="@color/themeColorBlue"
                 app:tabTextColor="@color/textHintColor"
