--- a/app/src/main/res/layout/fragment_coursetable.xml
+++ b/app/src/main/res/layout/fragment_coursetable.xml
@@ -53,7 +53,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        android:layout_marginLeft="6dp"
+                        android:layout_marginStart="6dp"
                         android:src="@drawable/ic_timer_black_24dp"
                         android:alpha="0.6"/>
 
@@ -64,8 +64,8 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toRightOf="@id/timeIcon"
                         app:layout_constraintRight_toRightOf="@id/timeBg"
-                        android:layout_marginLeft="4dp"
-                        android:layout_marginRight="12dp"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginEnd="12dp"
                         android:text="semesterTime"
                         android:textStyle="bold"/>
 
