--- a/app/src/main/res/layout/item_course_top.xml
+++ b/app/src/main/res/layout/item_course_top.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginLeft="12dp"
+            android:layout_marginStart="12dp"
             android:layout_marginBottom="12dp"
             android:text="示例课程"
             android:textSize="16sp"
