--- a/app/src/main/res/layout/item_coursetable_coursecard.xml
+++ b/app/src/main/res/layout/item_coursetable_coursecard.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="6dp"
+        android:layout_marginStart="6dp"
         android:text="丢孔杰平啊啊"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@id/courseName"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="2dp"
-        android:layout_marginLeft="6dp"
+        android:layout_marginStart="6dp"
         android:text="丢孔杰平"
         android:textSize="11sp"
         android:alpha="0.7"
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/coursePlace"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="6dp"
+        android:layout_marginStart="6dp"
         android:text="丢孔杰平"
         android:textSize="11sp"
         android:alpha="0.7"
@@ -58,7 +58,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginBottom="43dp"
-        android:layout_marginLeft="6dp"
+        android:layout_marginStart="6dp"
         android:text="00.00"
         android:textSize="9sp"
         android:textStyle="bold"
@@ -74,7 +74,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="48dp"
-        android:layout_marginRight="6dp"
+        android:layout_marginEnd="6dp"
         android:background="@drawable/bg_roundrectangle_white"
         android:alpha="0.7">
     </ImageView>
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toBottomOf="@id/todoTag"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="6dp"
+        android:layout_marginStart="6dp"
         android:text="丢孔杰平啊丢你啊"
         android:textSize="10sp"
         android:textStyle="bold"
