--- a/app/src/main/res/layout/layout_titlebar.xml
+++ b/app/src/main/res/layout/layout_titlebar.xml
@@ -57,7 +57,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="6dp"
+            android:layout_marginEnd="6dp"
             android:src="@drawable/avatar"/>
 
 
